Demo / Menu: Popup at wrong position, hangs on Wayland
How to reproduce:
- Open
gtk4-demo
- Start the
Menu
demo - Change the zoom level (bottom
GtkScale
) to about the mid value - Move the horizontal
GtkScrollBar
a bit on the right - Right-click on the image
The popup is positioned at a wrong position. It's interesting to note what happens thereafter on different backends:
- On Wayland the application hangs
- On X11 we get a few criticals about NULL
GdkMonitor
- On Win32 we crash because we expect a non-NULL
GdkMonitor
System Info:
- Arch Linux x86_64
- Gnome-Shell / Wayland
This is somewhat linked to !4917 (merged)
Edited by Luca Bacci