GdkWin32: Position popups on the primary monitor if outside of the visible screen area

Fixes a crash caused by attempting to dereference a NULL GdkMonitor*
in GdkWin32.

See https://gitlab.gnome.org/GNOME/gtk/-/issues/5125